force-app/main/default/objects/Lead/fields/About_Us__c.field-meta.xml
<CustomField>
    <fullName>About_Us__c</fullName>
    <description>Short about-Company. Created by CK Ext 221.</description>
    <label>About Us</label>
    <length>255</length>
    <type>Text</type>
</CustomField>