force-app/main/default/objects/Lead/fields/Actively_Worked__c.field-meta.xml
<CustomField>
    <fullName>Actively_Worked__c</fullName>
    <description>Field on the Lead to show if they have had activity in the last 60 days and the activity is not created by the integration user. Created by CK Ext. 221.</description>
    <formula>OR(
(TODAY()- LastActivityDate) &lt; 60,
(TODAY()- DATEVALUE(LastModifiedDate)) &lt; 60
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actively Worked</label>
    <type>Checkbox</type>
</CustomField>