force-app/main/default/objects/Lead/fields/Adopter_status__c.field-meta.xml
<CustomField>
    <fullName>Adopter_status__c</fullName>
    <label>Adopter status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>