force-app/main/default/objects/Lead/fields/AE_Owner__c.field-meta.xml
<CustomField>
    <fullName>AE_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Executive for this Contact. Created by CK Ext.221.</description>
    <label>AE Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>