force-app/main/default/objects/Lead/fields/Average_Pageviews__c.field-meta.xml
<CustomField>
    <fullName>Average_Pageviews__c</fullName>
    <description>he average number of pages a lead sees. Created by CK Ext.221.</description>
    <label>Average Pageviews</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>