force-app/main/default/objects/Lead/fields/Campaign_Source__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Source__c</fullName>
    <description>The source of the campaign that lead to this lead.</description>
    <label>Campaign Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AHA Rural 2019</fullName>
            </value>
            <value>
                <fullName>ATA 2019</fullName>
            </value>
            <value>
                <fullName>Innovation Exchange 2019</fullName>
            </value>
            <value>
                <fullName>ABM Advertising</fullName>
            </value>
            <value>
                <fullName>CXO Exchange 2019</fullName>
            </value>
            <value>
                <fullName>NTS 2020</fullName>
            </value>
            <value>
                <fullName>ATA2021</fullName>
            </value>
            <value>
                <fullName>HASummit 2020</fullName>
            </value>
            <value>
                <fullName>Beckers2021</fullName>
            </value>
            <value>
                <fullName>BRI Events2021</fullName>
            </value>
            <value>
                <fullName>HIMSS 2021</fullName>
            </value>
            <value>
                <fullName>AmWell 2021 Competitive</fullName>
            </value>
            <value>
                <fullName>HLTH 2021</fullName>
            </value>
            <value>
                <fullName>HIMSS 2022</fullName>
            </value>
            <value>
                <fullName>ATA2022</fullName>
            </value>
            <value>
                <fullName>Beckers2022</fullName>
            </value>
            <value>
                <fullName>Cold Email Drip: May 2019</fullName>
            </value>
            <value>
                <fullName>Cold Email Drip: Mid-Market</fullName>
            </value>
            <value>
                <fullName>Direct Traffic</fullName>
            </value>
            <value>
                <fullName>HealthLeaders Custom Research Brief</fullName>
            </value>
            <value>
                <fullName>HealthLeaders Newsletter Takeover</fullName>
            </value>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>Paid Social</fullName>
            </value>
            <value>
                <fullName>PPC</fullName>
            </value>
            <value>
                <fullName>Prospecting Email: Problems Q120</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Tier 2 Enterprise Email Series Q319</fullName>
            </value>
            <value>
                <fullName>Unengaged Email Series</fullName>
            </value>
            <value>
                <fullName>Marketing 2019</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>