force-app/main/default/objects/Lead/fields/Company_Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Domain_Name__c</fullName>
    <description>The domain name of the company or organization. Created by CK Ext. 221</description>
    <label>Company Domain Name</label>
    <type>Url</type>
</CustomField>