force-app/main/default/objects/Lead/fields/DefHC_Hospital_Name__c.field-meta.xml
<CustomField>
    <fullName>DefHC_Hospital_Name__c</fullName>
    <label>DHC Hospital Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>