force-app/main/default/objects/Lead/fields/Definitive_Healthcare_Executive_ID__c.field-meta.xml
<CustomField>
    <fullName>Definitive_Healthcare_Executive_ID__c</fullName>
    <description>Definitive Healthcare Executive ID</description>
    <label>Definitive Healthcare Executive ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>