force-app/main/default/objects/Lead/fields/DHC_EMR_Vendor_Ambulatory__c.field-meta.xml
<CustomField>
    <fullName>DHC_EMR_Vendor_Ambulatory__c</fullName>
    <label>DHC EMR Vendor Ambulatory</label>
    <length>250</length>
    <type>Text</type>
</CustomField>