force-app/main/default/objects/Lead/fields/DHC_EMR_Vendor_Inpatient__c.field-meta.xml
<CustomField>
    <fullName>DHC_EMR_Vendor_Inpatient__c</fullName>
    <label>DHC EMR Vendor Inpatient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>