force-app/main/default/objects/Lead/fields/DHC_Net_Patient_Revenue__c.field-meta.xml
<CustomField>
    <fullName>DHC_Net_Patient_Revenue__c</fullName>
    <label>DHC Net Patient Revenue</label>
    <length>30</length>
    <type>Text</type>
</CustomField>