force-app/main/default/objects/Lead/fields/DHC_Network_ID__c.field-meta.xml
<CustomField>
    <fullName>DHC_Network_ID__c</fullName>
    <label>DHC Network ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>