force-app/main/default/objects/Lead/fields/DHC_No_of_Discharges__c.field-meta.xml
<CustomField>
    <fullName>DHC_No_of_Discharges__c</fullName>
    <label>DHC # of Discharges</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>