force-app/main/default/objects/Lead/fields/DHC_of_No_Affiliated_Physicians__c.field-meta.xml
<CustomField>
    <fullName>DHC_of_No_Affiliated_Physicians__c</fullName>
    <label>DHC # of Affiliated Physicians</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>