force-app/main/default/objects/Lead/fields/DHC_Parent_Network_ID__c.field-meta.xml
<CustomField>
    <fullName>DHC_Parent_Network_ID__c</fullName>
    <label>DHC Parent Network ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>