force-app/main/default/objects/Lead/fields/DHC_Parent_Network_Name__c.field-meta.xml
<CustomField>
    <fullName>DHC_Parent_Network_Name__c</fullName>
    <label>DHC Parent Network Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>