force-app/main/default/objects/Lead/fields/DHC_Provider_Profile__c.field-meta.xml
<CustomField>
    <fullName>DHC_Provider_Profile__c</fullName>
    <label>DHC Provider Profile</label>
    <type>Url</type>
</CustomField>