force-app/main/default/objects/Lead/fields/DHC_Provider_Website__c.field-meta.xml
<CustomField>
    <fullName>DHC_Provider_Website__c</fullName>
    <label>DHC Provider Website</label>
    <type>Url</type>
</CustomField>