force-app/main/default/objects/Lead/fields/Emr_ambulatory__c.field-meta.xml
<CustomField>
    <fullName>Emr_ambulatory__c</fullName>
    <label>Emr ambulatory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>