force-app/main/default/objects/Lead/fields/Emr_inpatient__c.field-meta.xml
<CustomField>
    <fullName>Emr_inpatient__c</fullName>
    <label>Emr inpatient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>