force-app/main/default/objects/Lead/fields/Facebook__c.field-meta.xml
<CustomField>
    <fullName>Facebook__c</fullName>
    <description>Facebook link of this Lead.</description>
    <label>Facebook</label>
    <length>255</length>
    <type>Text</type>
</CustomField>