force-app/main/default/objects/Lead/fields/First_touch_after_MQL__c.field-meta.xml
<CustomField>
    <fullName>First_touch_after_MQL__c</fullName>
    <description>Date &amp; time of first contact after MQL. Created by CK Ext. 221</description>
    <label>First touch after MQL</label>
    <type>DateTime</type>
</CustomField>