force-app/main/default/objects/Lead/fields/Last_Engagement_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Engagement_Date__c</fullName>
    <description>The last time a contact engaged with your site or a form, document, meetings link, or tracked email. This doesn&apos;t include marketing emails or emails to multiple contacts.Created by CK Ext 221.</description>
    <label>Last Engagement Date</label>
    <type>Date</type>
</CustomField>