force-app/main/default/objects/Lead/fields/Last_Logged_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Logged_Call_Date__c</fullName>
    <description>The last time a call with Contact logged. Created by CK Ext 221.</description>
    <label>Last Logged Call Date</label>
    <type>Date</type>
</CustomField>