force-app/main/default/objects/Lead/fields/Last_Page_Seen__c.field-meta.xml
<CustomField>
    <fullName>Last_Page_Seen__c</fullName>
    <description>Last Page seen by the lead</description>
    <label>Last Page Seen</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>