force-app/main/default/objects/Lead/fields/Last_Salesforce_Sync_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Salesforce_Sync_Time__c</fullName>
    <description>Last Salesforce sync time with Hubpot. Created by CK Ext. 221</description>
    <label>Last Salesforce Sync Time</label>
    <type>DateTime</type>
</CustomField>