force-app/main/default/objects/Lead/fields/Last_Touch_Converting_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Last_Touch_Converting_Campaign__c</fullName>
    <description>The campaign responsible for the last touch creation of this contact. Created by CK Ext.221.</description>
    <label>Last Touch Converting Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>