force-app/main/default/objects/Lead/fields/Latest_Source_Drill_Down_2__c.field-meta.xml
<CustomField>
    <fullName>Latest_Source_Drill_Down_2__c</fullName>
    <description>Additional information about the source for the last session the contact used to find your website. Set automatically. Created by CK Ext. 221</description>
    <label>Latest Source Drill-Down 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>