force-app/main/default/objects/Lead/fields/Licensed_beds__c.field-meta.xml
<CustomField>
    <fullName>Licensed_beds__c</fullName>
    <label>Licensed beds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>