force-app/main/default/objects/Lead/fields/LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn__c</fullName>
    <description>Link to LinkedIn page of contact. Created by CK Ext. 221</description>
    <label>LinkedIn</label>
    <type>Url</type>
</CustomField>