force-app/main/default/objects/Lead/fields/LinkedIn_Clicks_30_days__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Clicks_30_days__c</fullName>
    <description>Sum of LinkedIn Clicks. Created by CK Ext. 221</description>
    <label>LinkedIn Clicks (30 days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>