force-app/main/default/objects/Lead/fields/Message_Description__c.field-meta.xml
<CustomField>
    <fullName>Message_Description__c</fullName>
    <description>Syncs Form notes from HS</description>
    <label>Message Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>