force-app/main/default/objects/Lead/fields/Net_operating_margin__c.field-meta.xml
<CustomField>
    <fullName>Net_operating_margin__c</fullName>
    <label>Net operating margin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>