force-app/main/default/objects/Lead/fields/Net_patient_revenue__c.field-meta.xml
<CustomField>
    <fullName>Net_patient_revenue__c</fullName>
    <label>Net patient revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>