force-app/main/default/objects/Lead/fields/Notes_Description__c.field-meta.xml
<CustomField>
    <fullName>Notes_Description__c</fullName>
    <description>Syncs SDR notes from HS</description>
    <label>Notes Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>