force-app/main/default/objects/Lead/fields/Npr_growth_1_year__c.field-meta.xml
<CustomField>
    <fullName>Npr_growth_1_year__c</fullName>
    <label>Npr growth 1 year</label>
    <length>50</length>
    <type>Text</type>
</CustomField>