force-app/main/default/objects/Lead/fields/Number_discharges__c.field-meta.xml
<CustomField>
    <fullName>Number_discharges__c</fullName>
    <label>Number discharges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>