force-app/main/default/objects/Lead/fields/Number_hospitals__c.field-meta.xml
<CustomField>
    <fullName>Number_hospitals__c</fullName>
    <label>Number hospitals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>