force-app/main/default/objects/Lead/fields/Number_of_Pageviews__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pageviews__c</fullName>
    <description>The sum of all pages a contact has seen on your website.</description>
    <label>Number of Pageviews</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>