force-app/main/default/objects/Lead/fields/Owner_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Owner_Assigned_Date__c</fullName>
    <description>The date the most recent deal owner was assigned to a deal. This is updated automatically by HubSpot. Created by CK Ext. 221</description>
    <label>Owner Assigned Date</label>
    <type>Date</type>
</CustomField>