force-app/main/default/objects/Lead/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Health System</fullName>
            </value>
            <value>
                <fullName>FQHC</fullName>
            </value>
            <value>
                <fullName>Children&apos;s Hospital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>