force-app/main/default/objects/Lead/fields/Telehealth_impementations__c.field-meta.xml
<CustomField>
    <fullName>Telehealth_impementations__c</fullName>
    <label>Telehealth impementations</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>