force-app/main/default/objects/Lead/fields/Telehealth_score__c.field-meta.xml
<CustomField>
    <fullName>Telehealth_score__c</fullName>
    <label>Telehealth score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>