force-app/main/default/objects/Lead/fields/Total_er_visits__c.field-meta.xml
<CustomField>
    <fullName>Total_er_visits__c</fullName>
    <label>Total er visits</label>
    <length>100</length>
    <type>Text</type>
</CustomField>