force-app/main/default/objects/Lead/fields/Total_Outpatient_Visits__c.field-meta.xml
<CustomField>
    <fullName>Total_Outpatient_Visits__c</fullName>
    <description>Total Outpatient visits. Created by CK Ext 221.</description>
    <label>Total Outpatient Visits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>