force-app/main/default/objects/Lead/fields/Total_Patient_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Patient_Revenue__c</fullName>
    <description>Total Patient Revenue value. Created by CK Ext. 221</description>
    <label>Total Patient Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>