force-app/main/default/objects/Lead/fields/Ultimate_Parent_Lead__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ultimate Parent Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Leads (Ultimate Parent Lead)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>