force-app/main/default/objects/Lead/fields/Unique_Identifier_Number__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier_Number__c</fullName>
    <description>Unique Identifier Number for Migration.</description>
    <label>Unique Identifier Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>