force-app/main/default/objects/Lead/fields/Web_Lead__c.field-meta.xml
<CustomField>
    <fullName>Web_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be checked if a contact submits a consult request</description>
    <inlineHelpText>This will be checked if a contact submits a consult request</inlineHelpText>
    <label>Web Lead</label>
    <type>Checkbox</type>
</CustomField>