force-app/main/default/objects/Lead/fields/What_is_your_telehealth_budget__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_telehealth_budget__c</fullName>
    <description>Budget for Telehealth. Created by CK Ext.221.</description>
    <label>What is your telehealth budget?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$1M+</fullName>
            </value>
            <value>
                <fullName>$500k</fullName>
            </value>
            <value>
                <fullName>$300k - $400K</fullName>
            </value>
            <value>
                <fullName>$200k - $300k</fullName>
            </value>
            <value>
                <fullName>$100k - $200k</fullName>
            </value>
            <value>
                <fullName>Below $100k</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>