force-app/main/default/objects/Lead/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <businessProcess>General Lead Process</businessProcess>
    <description>Generic Lead Process</description>
    <label>Standard</label>
</RecordType>