force-app/main/default/objects/Lead/validationRules/Require_a_LeadSource_to_Convert.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_a_LeadSource_to_Convert</fullName>
    <active>true</active>
    <description>Requires a LeadSource to convert the lead</description>
    <errorConditionFormula>AND (
 IsConverted,
 IsBlank(TEXT(LeadSource)),
 NOT( 
     OR(
       $Profile.Name = &quot;System Administrator&quot;,
       $Profile.Name = &quot;Integration User&quot;
     )
 )
)</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>Please include a LeadSource to convert this Lead</errorMessage>
</ValidationRule>