force-app/main/default/objects/Lead/validationRules/Require_Nurture_Loss_Reasons.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Nurture_Loss_Reasons</fullName>
    <active>false</active>
    <description>Requires a nurture loss value</description>
    <errorConditionFormula>AND(
  ISPICKVAL( Status , &quot;Nurture&quot;),
  ISBLANK(TEXT( Nurture_Details_Lost_reason__c )),
   NOT( 
     OR(
       $Profile.Name = &quot;System Administrator&quot;,
       $Profile.Name = &quot;Integration User&quot;
     )
 )
)</errorConditionFormula>
    <errorDisplayField>Nurture_Details_Lost_reason__c</errorDisplayField>
    <errorMessage>Please select a nurture/loss reason</errorMessage>
</ValidationRule>