force-app/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>texcellency__DefHC_HospitalID__c</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Parent_Lead__c</columns>
    <columns>Ultimate_Parent_Lead__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Web_Lead__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Lead_Type__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Standard</value>
    </filters>
    <label>All Open Leads</label>
</ListView>